constraint-templates-hv/allowedstorageclass-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sallowedstorageclass
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedStorageClass
      validation:
        openAPIV3Schema:
          type: object
          properties:
            allowedStorageClasses:
              type: array
              items:
                type: string

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedstorageclass

        violation[{"msg": msg}] {
          storageclass := input.review.object.spec.storageClassName

          not storageclass_allowed(storageclass)

          msg := sprintf(
            "StorageClass '%v' is not allowed",
            [storageclass]
          )
        }

        storageclass_allowed(storageclass) {
          storageclass == input.parameters.allowedStorageClasses[_]
        }
