constraint-templates-hv/denylatesttag-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenylatesttag
spec:
  crd:
    spec:
      names:
        kind: K8sDenyLatestTag

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenylatesttag

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"

          container := input.review.object.spec.containers[_]
          endswith(container.image, ":latest")

          msg := sprintf(
            "Container '%v' uses forbidden image tag ':latest'",
            [container.name]
          )
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Deployment"

          container := input.review.object.spec.template.spec.containers[_]
          endswith(container.image, ":latest")

          msg := sprintf(
            "Container '%v' uses forbidden image tag ':latest'",
            [container.name]
          )
        }
