constraint-templates-hv/denylatesttag-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyLatestTag
metadata:
  name: deny-latest-tag
spec:
  match:
    namespaces:
      - hv-opa-demo
    kinds:
      - apiGroups: [""]
        kinds:
          - Pod
      - apiGroups: ["apps"]
        kinds:
          - Deployment
