constraint-templates-hv/denynodeport-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenynodeport
spec:
  crd:
    spec:
      names:
        kind: K8sDenyNodePort

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenynodeport

        violation[{"msg": msg}] {
          input.review.object.spec.type == "NodePort"

          msg := "Services of type NodePort are not allowed"
        }
