constraint-templates-hv/denynodeport-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyNodePort
metadata:
  name: deny-nodeport-services
spec:
  match:
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - yr-opa-demo
    kinds:
      - apiGroups: [""]
        kinds:
          - Service
