constraint-templates-hv/denyprivileged-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyPrivileged
metadata:
  name: deny-privileged-containers
spec:
  match:
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - yr-opa-demo

    kinds:
      - apiGroups: [""]
        kinds:
          - Pod
