constraint-templates-hv/denyrunasroot-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenyrunasroot
spec:
  crd:
    spec:
      names:
        kind: K8sDenyRunAsRoot

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyrunasroot

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]

          container.securityContext.runAsUser == 0

          msg := sprintf(
            "Container '%v' is running as root (runAsUser: 0), which is not allowed",
            [container.name]
          )
        }
