constraint-templates-hv/denyrunasroot-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyRunAsRoot
metadata:
  name: deny-run-as-root
spec:
  match:
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - yr-opa-demo
      - hv-opa-demo
    kinds:
      - apiGroups: [""]
        kinds:
          - Pod
