constraint-templates-hv/requiredenvlabel-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredenvlabel
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredEnvLabel

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredenvlabel

        violation[{"msg": msg}] {
          input.review.object.metadata.labels.env == ""
          msg := "Pod must contain label: env"
        }

        violation[{"msg": msg}] {
          not input.review.object.metadata.labels.env
          msg := "Pod must contain label: env"
        }
