constraint-templates-hv/requiredenvlabel-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredEnvLabel
metadata:
  name: require-env-label
spec:
  match:
    namespaces:
      - hv-opa-demo
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
